// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SummaryViewModel Check answers (0 items) should use correct summary labels 1`] = `
[
  {
    "label": "How would you like to receive your pizza?",
    "name": "orderType",
    "title": "How you would like to receive your pizza",
    "value": "Collection",
  },
  {
    "label": "Pizza",
    "name": "pizza",
    "title": "Pizzas",
    "value": "",
  },
]
`;

exports[`SummaryViewModel Check answers (1 item) should use correct summary labels 1`] = `
[
  {
    "label": "How would you like to receive your pizza?",
    "name": "orderType",
    "title": "How you would like to receive your pizza",
    "value": "Delivery",
  },
  {
    "label": "Pizza",
    "name": "pizza",
    "title": "Pizza added",
    "value": "You added 1 Pizza",
  },
]
`;

exports[`SummaryViewModel Check answers (2 items) should use correct summary labels 1`] = `
[
  {
    "label": "How would you like to receive your pizza?",
    "name": "orderType",
    "title": "How you would like to receive your pizza",
    "value": "Delivery",
  },
  {
    "label": "Pizza",
    "name": "pizza",
    "title": "Pizzas added",
    "value": "You added 2 Pizzas",
  },
]
`;
